--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,21 +8,35 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <service
             android:name=".MyService"
             android:label="ElgamalKeyBoard"
-            android:permission="android.permission.BIND_INPUT_METHOD"
-            >
+            android:permission="android.permission.BIND_INPUT_METHOD">
+            <meta-data
+                android:name="android.view.im"
+                android:resource="@xml/method" />
 
-            <meta-data android:name="android.view.im" android:resource="@xml/method"/>
-                <intent-filter>
-                    <action android:name="android.view.InputMethod"/>
-                </intent-filter>
-
-
+            <intent-filter>
+                <action android:name="android.view.InputMethod" />
+            </intent-filter>
         </service>
+
+        <receiver
+            android:name=".MyReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".Advertise"></activity>
+
+        <activity android:name=".MainActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
